force-app/main/default/objects/User/fields/Area_Negocio__c.field-meta.xml
<CustomField>
    <fullName>Area_Negocio__c</fullName>
    <label>Área de Negócio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agência</fullName>
            </value>
            <value>
                <fullName>Bases_de_apoio_offshore</fullName>
                <label>Bases de Apoio Offshore</label>
            </value>
            <value>
                <fullName>Estaleiro</fullName>
            </value>
            <value>
                <fullName>Logística - Plataforma NE</fullName>
            </value>
            <value>
                <fullName>Logística - Plataforma SE</fullName>
            </value>
            <value>
                <fullName>Tecon Rio Grande</fullName>
            </value>
            <value>
                <fullName>Tecon Salvador</fullName>
            </value>
            <value>
                <fullName>Rebocadores</fullName>
            </value>
            <value>
                <fullName>WSUT</fullName>
            </value>
            <value>
                <fullName>Novos Negócios</fullName>
            </value>
            <value>
                <fullName>Argonáutica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>