force-app/main/default/objects/User/fields/N_mero_de_Usu_rios__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_Usu_rios__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Campo com valor 1 para ser utilizado em conta em relatórios</description>
    <label>Número de Usuários</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>