force-app/main/default/objects/User/fields/RegiaoAtendimentoSecundaria__c.field-meta.xml
<CustomField>
    <fullName>RegiaoAtendimentoSecundaria__c</fullName>
    <description>Região de atendimento secundária deste usuário, usada para abrir automaticamente a Área Interna de SLA correspondente quando ele assume um Case de uma Gestão de SLA com Duplo Business Hours.</description>
    <label>Região de Atendimento Secundária</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RegiaoAtendimentoSecundaria</valueSetName>
    </valueSet>
</CustomField>