force-app/main/default/objects/User/fields/UN__c.field-meta.xml
<CustomField>
    <fullName>UN__c</fullName>
    <label>UN</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plataforma SE</fullName>
            </value>
            <value>
                <fullName>Plataforma NE</fullName>
            </value>
            <value>
                <fullName>Tecon Salvador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>