force-app/main/default/objects/User/fields/Unidade_de_Neg_cio__c.field-meta.xml
<CustomField>
    <fullName>Unidade_de_Neg_cio__c</fullName>
    <label>Unidade de Negócio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tecon Rio Grande</fullName>
            </value>
            <value>
                <fullName>Tecon Salvador</fullName>
            </value>
            <value>
                <fullName>Wilsons Sons - Tecon RG</fullName>
            </value>
            <value>
                <fullName>Wilsons Sons - Tecon SV</fullName>
            </value>
            <value>
                <fullName>Rebocadores</fullName>
            </value>
            <value>
                <fullName>Logística</fullName>
            </value>
            <value>
                <fullName>Rio Grande</fullName>
                <isActive>false</isActive>
                <label>Rio Grande</label>
            </value>
            <value>
                <fullName>Salvador</fullName>
                <isActive>false</isActive>
                <label>Salvador</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>