force-app/main/default/objects/User/fields/Unidade_de_Neg_cioTXT__c.field-meta.xml
<CustomField>
    <fullName>Unidade_de_Neg_cioTXT__c</fullName>
    <label>Unidade de NegócioTXT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>