force-app/main/default/objects/User/listViews/Usuarios_Tecon_Salvador.listView-meta.xml
<ListView>
    <fullName>Usuarios_Tecon_Salvador</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Area_Negocio__c</field>
        <operation>equals</operation>
        <value>Tecon Salvador</value>
    </filters>
    <label>Usuarios Tecon Salvador</label>
    <language>en_US</language>
</ListView>